    - Bugs fixed
        - Fixed bug when a webapp is mounted on the root instead of 
          some context path. Reported by Bruno Dumon.
        - Fixed bug regarding the deeplyAccessible property for a 
          directory. Reported by Carlos Alexandre Moscoso.
        - Fixed GWT javascript recursion with the Engine#getInstance 
          method. Reported by Doug Alcouffe.

- 1.1 Release candidate 1 (08/20/2008)
    - Breaking change
        - The logger names used by Restlet have been fully refactored 
          to allow use more predictable names, to facilitate logging
          configuration, filtering, etc. See the wiki for details:
          http://wiki.restlet.org/docs_1.1/g1/13-restlet/29-restlet/98-restlet/101-restlet.html
    - Bugs fixed
        - Fixed NPE with WadlApplications that host Restlet subclasses.
          Reported by François Renard.
        - Removed all 'volatile' declaration in the Restlet-GWT module
          to prevent compilation issues. Reported by Nitin Gupta and
          fixed by Rob Heittman.
        - Fixed NPE occuring in JaxbRepresentation due to recent usage
          of representation's character set.
        - Fixed NPE in HttpRequest when using a Server instance without
          context. Reported by Bruno Dumon.
        - Fixed NPE in WadlApplication. Reported by Vincent Ricard.
        - Fixed blockings in internal HTTP connectors while processing
          requests. Reported by Zsolt Czinkos.
        - Refactored the ImmutableDate class since comparison operations
          ("after", etc) may fail. Reported by Mike Brzozowski.
        - Fixed bug in InputEntityStream when entity was containing '0' 
          bytes.
        - Fixed instantion of application with a child context when 
          deployed in a servlet container. Reported by Vincent Ricard.
        - Fixed bug in Grizzly connector causing retrieval of a request
          entity to fail.